[gd_scene load_steps=9 format=3 uid="uid://ntp657mu5don"]

[ext_resource type="Script" uid="uid://bylp4cxnnl3xt" path="res://Scripts/Body/PlayerBody.gd" id="1_m6ro6"]
[ext_resource type="PackedScene" uid="uid://b0qw62wntixs5" path="res://PackedScenes/UI/PlayerUI.tscn" id="2_7mclc"]
[ext_resource type="PackedScene" uid="uid://dn11a5vf40iy4" path="res://Blend/Player.blend" id="2_cma7h"]
[ext_resource type="PackedScene" uid="uid://cy524lpekf6g8" path="res://Blend/PlayerDashing.blend" id="3_kngyk"]
[ext_resource type="Material" uid="uid://qtb62t4rhvkt" path="res://Materials/WhiteTrans.tres" id="4_v6n4g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0rwas"]

[sub_resource type="BoxMesh" id="BoxMesh_kngyk"]
material = ExtResource("4_v6n4g")

[sub_resource type="BoxShape3D" id="BoxShape3D_m6ro6"]
size = Vector3(30, 1, 30)

[node name="Player" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
collision_layer = 0
script = ExtResource("1_m6ro6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("BoxShape3D_0rwas")

[node name="PlayerBlend" parent="CharacterBody3D/CollisionShape3D" instance=ExtResource("2_cma7h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.248182, 0)

[node name="PlayerDashingBlend" parent="CharacterBody3D/CollisionShape3D" instance=ExtResource("3_kngyk")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.248182, 0)
visible = false

[node name="PelletPathMesh" type="MeshInstance3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, -0.315802, -0.810459)
mesh = SubResource("BoxMesh_kngyk")
skeleton = NodePath("../..")

[node name="PelletPathRay" type="RayCast3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.303025, -0.341315)
target_position = Vector3(0, 0, -1000)
collision_mask = 3
collide_with_areas = true

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.628411, 0.777882, 0, -0.777882, 0.628411, 0, 3.002, 2.52)
current = true

[node name="MouseArea3D" type="Area3D" parent="CharacterBody3D"]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/MouseArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.04117, 0)
shape = SubResource("BoxShape3D_m6ro6")

[node name="PlayerArea3D" type="Area3D" parent="CharacterBody3D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/PlayerArea3D"]
shape = SubResource("BoxShape3D_0rwas")

[node name="PlayerUI" parent="CharacterBody3D" instance=ExtResource("2_7mclc")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
sky_mode = 1

[connection signal="area_entered" from="CharacterBody3D/PlayerArea3D" to="CharacterBody3D" method="_on_player_area_3d_area_entered"]
[connection signal="body_entered" from="CharacterBody3D/PlayerArea3D" to="CharacterBody3D" method="_on_player_area_3d_body_entered"]
